--- a/pom.xml
+++ b/pom.xml
@@ -3,4 +3,18 @@
   <groupId>Avaliacao01SenacDesenvolvimentoDesktop</groupId>
   <artifactId>Avaliacao01SenacDesenvolvimentoDesktop</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+
+<dependencies>
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>5.1.38</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>8.0.17</version>
+		</dependency>
+	</dependencies>
 </project>
